--- a/src/main/resources/public/src/scss/template/utilities/_flex.scss
+++ b/src/main/resources/public/src/scss/template/utilities/_flex.scss
@@ -24,7 +24,7 @@ $flex-align-type: (row, column);
 .flex-wrap {
   flex-wrap: wrap;
 }
-.flex-wrap-r {
+.flex-wrap-reverse {
   flex-wrap: wrap-reverse;
 }
 
