--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -163,7 +163,7 @@ input, button, select, optgroup, textarea {
   flex-wrap: wrap;
 }
 
-.flex-wrap-r {
+.flex-wrap-reverse {
   flex-wrap: wrap-reverse;
 }
 
@@ -337,80 +337,80 @@ input, button, select, optgroup, textarea {
   padding-top: 0.3125rem;
 }
 
-.pl-1 {
-  padding-left: 0.3125rem;
+.pr-1 {
+  padding-right: 0.3125rem;
 }
 
 .pb-1 {
   padding-bottom: 0.3125rem;
 }
 
-.pr-1 {
-  padding-right: 0.3125rem;
+.pl-1 {
+  padding-left: 0.3125rem;
 }
 
 .pt-2 {
   padding-top: 0.625rem;
 }
 
-.pl-2 {
-  padding-left: 0.625rem;
+.pr-2 {
+  padding-right: 0.625rem;
 }
 
 .pb-2 {
   padding-bottom: 0.625rem;
 }
 
-.pr-2 {
-  padding-right: 0.625rem;
+.pl-2 {
+  padding-left: 0.625rem;
 }
 
 .pt-3 {
   padding-top: 0.9375rem;
 }
 
-.pl-3 {
-  padding-left: 0.9375rem;
+.pr-3 {
+  padding-right: 0.9375rem;
 }
 
 .pb-3 {
   padding-bottom: 0.9375rem;
 }
 
-.pr-3 {
-  padding-right: 0.9375rem;
+.pl-3 {
+  padding-left: 0.9375rem;
 }
 
 .pt-4 {
   padding-top: 1.25rem;
 }
 
-.pl-4 {
-  padding-left: 1.25rem;
+.pr-4 {
+  padding-right: 1.25rem;
 }
 
 .pb-4 {
   padding-bottom: 1.25rem;
 }
 
-.pr-4 {
-  padding-right: 1.25rem;
+.pl-4 {
+  padding-left: 1.25rem;
 }
 
 .pt-5 {
   padding-top: 1.5625rem;
 }
 
-.pl-5 {
-  padding-left: 1.5625rem;
+.pr-5 {
+  padding-right: 1.5625rem;
 }
 
 .pb-5 {
   padding-bottom: 1.5625rem;
 }
 
-.pr-5 {
-  padding-right: 1.5625rem;
+.pl-5 {
+  padding-left: 1.5625rem;
 }
 
 .m-0 {
@@ -425,96 +425,96 @@ input, button, select, optgroup, textarea {
   margin-top: 0.3125rem;
 }
 
-.ml-1 {
-  margin-left: 0.3125rem;
+.mr-1 {
+  margin-right: 0.3125rem;
 }
 
 .mb-1 {
   margin-bottom: 0.3125rem;
 }
 
-.mr-1 {
-  margin-right: 0.3125rem;
+.ml-1 {
+  margin-left: 0.3125rem;
 }
 
 .mt-2 {
   margin-top: 0.625rem;
 }
 
-.ml-2 {
-  margin-left: 0.625rem;
+.mr-2 {
+  margin-right: 0.625rem;
 }
 
 .mb-2 {
   margin-bottom: 0.625rem;
 }
 
-.mr-2 {
-  margin-right: 0.625rem;
+.ml-2 {
+  margin-left: 0.625rem;
 }
 
 .mt-3 {
   margin-top: 0.9375rem;
 }
 
-.ml-3 {
-  margin-left: 0.9375rem;
+.mr-3 {
+  margin-right: 0.9375rem;
 }
 
 .mb-3 {
   margin-bottom: 0.9375rem;
 }
 
-.mr-3 {
-  margin-right: 0.9375rem;
+.ml-3 {
+  margin-left: 0.9375rem;
 }
 
 .mt-4 {
   margin-top: 1.25rem;
 }
 
-.ml-4 {
-  margin-left: 1.25rem;
+.mr-4 {
+  margin-right: 1.25rem;
 }
 
 .mb-4 {
   margin-bottom: 1.25rem;
 }
 
-.mr-4 {
-  margin-right: 1.25rem;
+.ml-4 {
+  margin-left: 1.25rem;
 }
 
 .mt-5 {
   margin-top: 1.5625rem;
 }
 
-.ml-5 {
-  margin-left: 1.5625rem;
+.mr-5 {
+  margin-right: 1.5625rem;
 }
 
 .mb-5 {
   margin-bottom: 1.5625rem;
 }
 
-.mr-5 {
-  margin-right: 1.5625rem;
+.ml-5 {
+  margin-left: 1.5625rem;
 }
 
 .mt-auto {
   margin-top: auto;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mr-auto {
+  margin-right: auto;
 }
 
 .mb-auto {
   margin-bottom: auto;
 }
 
-.mr-auto {
-  margin-right: auto;
+.ml-auto {
+  margin-left: auto;
 }
 
 /* _fonts.scss
