--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -162,7 +162,7 @@ input, button, select, optgroup, textarea {
   flex-wrap: wrap;
 }
 
-.flex-wrap-r {
+.flex-wrap-reverse {
   flex-wrap: wrap-reverse;
 }
 
@@ -336,80 +336,80 @@ input, button, select, optgroup, textarea {
   padding-top: 0.3125rem;
 }
 
-.pl-1 {
-  padding-left: 0.3125rem;
+.pr-1 {
+  padding-right: 0.3125rem;
 }
 
 .pb-1 {
   padding-bottom: 0.3125rem;
 }
 
-.pr-1 {
-  padding-right: 0.3125rem;
+.pl-1 {
+  padding-left: 0.3125rem;
 }
 
 .pt-2 {
   padding-top: 0.625rem;
 }
 
-.pl-2 {
-  padding-left: 0.625rem;
+.pr-2 {
+  padding-right: 0.625rem;
 }
 
 .pb-2 {
   padding-bottom: 0.625rem;
 }
 
-.pr-2 {
-  padding-right: 0.625rem;
+.pl-2 {
+  padding-left: 0.625rem;
 }
 
 .pt-3 {
   padding-top: 0.9375rem;
 }
 
-.pl-3 {
-  padding-left: 0.9375rem;
+.pr-3 {
+  padding-right: 0.9375rem;
 }
 
 .pb-3 {
   padding-bottom: 0.9375rem;
 }
 
-.pr-3 {
-  padding-right: 0.9375rem;
+.pl-3 {
+  padding-left: 0.9375rem;
 }
 
 .pt-4 {
   padding-top: 1.25rem;
 }
 
-.pl-4 {
-  padding-left: 1.25rem;
+.pr-4 {
+  padding-right: 1.25rem;
 }
 
 .pb-4 {
   padding-bottom: 1.25rem;
 }
 
-.pr-4 {
-  padding-right: 1.25rem;
+.pl-4 {
+  padding-left: 1.25rem;
 }
 
 .pt-5 {
   padding-top: 1.5625rem;
 }
 
-.pl-5 {
-  padding-left: 1.5625rem;
+.pr-5 {
+  padding-right: 1.5625rem;
 }
 
 .pb-5 {
   padding-bottom: 1.5625rem;
 }
 
-.pr-5 {
-  padding-right: 1.5625rem;
+.pl-5 {
+  padding-left: 1.5625rem;
 }
 
 .m-0 {
@@ -424,96 +424,96 @@ input, button, select, optgroup, textarea {
   margin-top: 0.3125rem;
 }
 
-.ml-1 {
-  margin-left: 0.3125rem;
+.mr-1 {
+  margin-right: 0.3125rem;
 }
 
 .mb-1 {
   margin-bottom: 0.3125rem;
 }
 
-.mr-1 {
-  margin-right: 0.3125rem;
+.ml-1 {
+  margin-left: 0.3125rem;
 }
 
 .mt-2 {
   margin-top: 0.625rem;
 }
 
-.ml-2 {
-  margin-left: 0.625rem;
+.mr-2 {
+  margin-right: 0.625rem;
 }
 
 .mb-2 {
   margin-bottom: 0.625rem;
 }
 
-.mr-2 {
-  margin-right: 0.625rem;
+.ml-2 {
+  margin-left: 0.625rem;
 }
 
 .mt-3 {
   margin-top: 0.9375rem;
 }
 
-.ml-3 {
-  margin-left: 0.9375rem;
+.mr-3 {
+  margin-right: 0.9375rem;
 }
 
 .mb-3 {
   margin-bottom: 0.9375rem;
 }
 
-.mr-3 {
-  margin-right: 0.9375rem;
+.ml-3 {
+  margin-left: 0.9375rem;
 }
 
 .mt-4 {
   margin-top: 1.25rem;
 }
 
-.ml-4 {
-  margin-left: 1.25rem;
+.mr-4 {
+  margin-right: 1.25rem;
 }
 
 .mb-4 {
   margin-bottom: 1.25rem;
 }
 
-.mr-4 {
-  margin-right: 1.25rem;
+.ml-4 {
+  margin-left: 1.25rem;
 }
 
 .mt-5 {
   margin-top: 1.5625rem;
 }
 
-.ml-5 {
-  margin-left: 1.5625rem;
+.mr-5 {
+  margin-right: 1.5625rem;
 }
 
 .mb-5 {
   margin-bottom: 1.5625rem;
 }
 
-.mr-5 {
-  margin-right: 1.5625rem;
+.ml-5 {
+  margin-left: 1.5625rem;
 }
 
 .mt-auto {
   margin-top: auto;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mr-auto {
+  margin-right: auto;
 }
 
 .mb-auto {
   margin-bottom: auto;
 }
 
-.mr-auto {
-  margin-right: auto;
+.ml-auto {
+  margin-left: auto;
 }
 
 /* _fonts.scss
@@ -1696,6 +1696,8 @@ button.ghost-line:disabled .icon {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.1875rem;
+  -webkit-border-radius: 0.1875rem;
+  -moz-border-radius: 0.1875rem;
 }
 .btn-group .btn .icon,
 .btn-group button .icon {
@@ -1758,6 +1760,8 @@ button.ghost-line:disabled .icon {
 .btn-group.btn-vertical button {
   flex: 0 1 auto;
   border-radius: 0.1875rem;
+  -webkit-border-radius: 0.1875rem;
+  -moz-border-radius: 0.1875rem;
 }
 .btn-group.btn-vertical .btn:not(:first-child),
 .btn-group.btn-vertical button:not(:first-child) {
@@ -1787,6 +1791,8 @@ button.ghost-line:disabled .icon {
   background-color: #F7F8F9;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.1875rem;
+  -webkit-border-radius: 0.1875rem;
+  -moz-border-radius: 0.1875rem;
 }
 .btn-group-toggle .btn .icon,
 .btn-group-toggle button .icon {
@@ -1849,6 +1855,8 @@ button.ghost-line:disabled .icon {
 .btn-group-toggle.btn-vertical button {
   flex: 0 1 auto;
   border-radius: 0.1875rem;
+  -webkit-border-radius: 0.1875rem;
+  -moz-border-radius: 0.1875rem;
 }
 .btn-group-toggle.btn-vertical .btn:not(:first-child),
 .btn-group-toggle.btn-vertical button:not(:first-child) {
@@ -3017,7 +3025,7 @@ button .icon-plus {
   -webkit-box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
   -moz-box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
   box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
-  border: solid 0.0625rem #EBEBEB;
+  border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
@@ -3054,7 +3062,7 @@ button .icon-plus {
   font-weight: 500;
   margin: 0rem 0rem 0rem 0.3125rem;
   padding: 0.4375rem 1.5rem;
-  border: solid 0.0625rem #EBEBEB;
+  border: 0.0625rem solid #EBEBEB;
 }
 .gmodal-icon-success {
   background-image: url("../media/icons/alert/icon_alert_success.svg");
@@ -3730,8 +3738,6 @@ button .icon-plus {
   left: 4rem;
   width: 0;
   height: 0;
-  border-left: 0.375rem solid transparent;
-  border-right: 0.375rem solid transparent;
   border-bottom: 0.375rem solid #be2626;
 }
 .file-uploader-edit .dropzone .dz-preview.dz-error:hover .dz-error-message {
@@ -4758,7 +4764,7 @@ span.modal_node_selected label {
   border: 0.0625rem solid #EBEBEB;
 }
 .color-picker .color-input .selected-color-box:hover {
-  border: 0.0625rem solid #0098FF;
+  border-color: #0098FF;
 }
 .color-picker .color-palette {
   display: flex;
@@ -4783,7 +4789,7 @@ span.modal_node_selected label {
   outline: 0.0625rem solid #0098FF;
 }
 .color-picker .color-palette div:last-child {
-  border: 0.0625rem solid #EBEBEB;
+  border-color: #EBEBEB;
 }
 .color-picker .color-palette-opacity {
   display: none;
@@ -5996,7 +6002,7 @@ body.modal-active {
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 0 0 0 0.3125rem;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625 solid #EBEBEB;
   line-height: 1.1;
   cursor: text;
   outline: 0;
