--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -16,16 +16,16 @@
       width: $color-picker-color-size;
       height: $color-picker-color-size;
       margin: $color-picker-margin;
-      border: 0.1875rem solid transparent; // 3px
+      @include border(0.1875rem, solid, transparent, all); // 3px
       cursor: pointer;
       &-box {
         display: flex;
         width: $color-picker-box-size;
         height: $color-picker-box-size;
         margin-right: $color-picker-margin;
-        border: 0.0625rem solid map-get($grays, 'line');
+        @include border(0.0625rem, solid, map-get($grays, 'line'), all); // 1px
         &:hover {
-          border: 0.0625rem solid $blue; // 1px
+          border-color: $blue;
         }
       }
     }
@@ -38,7 +38,7 @@
     width: $color-picker-palette-width;
     padding: $color-picker-palette-padding;
     margin-top: $color-picker-margin;
-    border: 0.0625rem solid map-get($grays, 'line');
+    @include border(0.0625rem, solid, map-get($grays, 'line'), all); // 1px
     background-color: $white;
     // 컬러 팔레트 내부의 색상표 박스 디자인
     & div {
@@ -50,11 +50,13 @@
       cursor: pointer;
 
       &.selected {
-        border: $color-picker-colorchip-border;
+        @include border($color-picker-colorchip-border-width, solid, $color-picker-colorchip-border-color, all);
         outline: 0.0625rem solid $blue;
       }
 
-      &:last-child { border: 0.0625rem solid map-get($grays, 'line'); }
+      &:last-child {
+        border-color: map-get($grays, 'line');
+      }
     }
   }
   // opacity palette
@@ -63,8 +65,7 @@
     width: 100%;
     height: 2.5rem; // 40px
     padding-left: 0.219rem; // 3.5px
-    border: 0.0625rem solid map-get($grays, 'line'); // 1px
-    border-top: none;
+    @include border(0.0625rem, solid, map-get($grays, 'line'), all, top); // 1px
     background-color: $white;
 
     span {
