--- a/src/main/resources/public/src/scss/template/_modal.scss
+++ b/src/main/resources/public/src/scss/template/_modal.scss
@@ -30,7 +30,7 @@ body.modal-active {
     width: $modal-width;
     margin: 0 auto 2em auto;
     background-color: $modal-bg-color;
-    border: $modal-border;
+    @include border($modal-border-width, solid, $modal-border-color, all);
     @include boxShadow(0, 0, 0.3125rem, 0, map-get($grays, 'line')); // 흐림 5px, $line-gray
     @include borderRadius(0.0625rem); // 1px
     z-index: $z-index-between-alert-modal;
@@ -40,13 +40,13 @@ body.modal-active {
       font-size: $modal-header-font-size;
       font-weight: $modal-header-font-weight;
       color: $modal-header-font-color;
-      border-bottom: $modal-border;
+      @include border($modal-border-width, solid, $modal-border-color, bottom);
       padding: 1.125rem 0 0 1.25rem; // 18px 0 0 20px
     }
     
     .modal-content {
       height: calc(#{$modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
-      border-bottom: $modal-border;
+      @include border($modal-border-width, solid, $modal-border-color, bottom);
       overflow: auto;
     }
 
