--- a/src/main/resources/public/src/scss/template/_tree.scss
+++ b/src/main/resources/public/src/scss/template/_tree.scss
@@ -36,7 +36,7 @@ ul.tree {
     &:before {
       content: '';
       @include absolute($top: 0, $bottom: 0);
-      border-left: $tree-line;
+      @include border($tree-line-width, solid, $tree-line-color, left);
     }
 
     li {
@@ -47,7 +47,7 @@ ul.tree {
         @include absolute($top: ($tree-line-height / 2), $left: 0); // half of line-height
         width: $tree-indentation; 
         height: $tree-line-width; // 1px
-        border-top: $tree-line;
+        @include border($tree-line-width, solid, $tree-line-color, top);
       }
        // cover the excess line
        &:last-child:before {
@@ -91,7 +91,7 @@ img.off {
 
 span.node {
   padding: 0.25rem 0.188rem 0.25rem 0; // 4px 3px 4px 0
-  border: $tree-selected-border-width solid transparent;
+  @include border($tree-selected-border-width, solid, transparent, all);
   &:hover {
     background-color: $tree-hover-bg-color;
     @include borderRadius(0.125rem); // 2px
@@ -126,7 +126,7 @@ span.modal_node_selected,{
     font-size:  $modal-header-font-size;
     font-weight:  $modal-header-font-weight;
     color: $modal-header-font-color;
-    border-bottom: $modal-border;
+    @include border($modal-border-width, solid, $modal-border-color, bottom);
   }
 
   .tree-list {
