#10561 포탈 공지사항 상단공지 디자인 적용

--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -280,6 +280,7 @@
       @include portalViewTemplate();
 
       .list { height: $layout-list-height }
+      .notice-pinned { background-color: $notice-pinned-color; }
     }
   }
 }
