#10646 게시판 삭제 오류 수정

--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -255,7 +255,11 @@
                             location.href = '/boards/search';
                         });
                     } else {
-                        resultMsg = i18n.msg('board.msg.duplicateBoardAdminTitle');
+                        if (method == 'delete') {
+                            resultMsg = i18n.msg('common.msg.fail');
+                        } else {
+                            resultMsg = i18n.msg('board.msg.duplicateBoardAdminTitle');
+                        }
                         aliceAlert.alertWarning(resultMsg);
                     }
                 },
