#10554 폼 디자이너 디자인 개선
- 소스 원복
- 일부 변수 수정

--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -160,7 +160,11 @@
           &:nth-child(even) {
             flex: 1 1 auto;
           }
-          &:hover { background-color: $component-icon-hover-bg-color; }
+          &:hover {
+            background-color: $component-icon-hover-bg-color;
+            > .icon { background: $icon-component-focus-color; }
+            > .component-name { color: $icon-component-focus-color; }
+          }
 
           .icon {
             display: inline-block;
