--- a/src/main/resources/public/src/scss/formRefactoring/_form.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_form.scss
@@ -4,21 +4,24 @@
   display: inline-block;
   min-height: $form-min-height;
   background-color: $form-bg-color;
-  border: $form-border;
+  @include border(0.0625rem, solid, map-get($grays, "line"), all); // 1px
   box-shadow: $form-box-shadow;
-
   & *:focus { outline: none !important; }
 }
 // 그룹 툴팁
 .zenius-group-tooltip {
   position: relative;
-  padding: 1.25rem; // 20px
-  border: 0.0625rem solid transparent; // 1px
+  padding: 0.9375rem; // 15px
+  @include border(0.0625rem, solid, #D7DBE0, all); // 1px
+  @include borderRadius($group-selected-border-radius); // 2px
   background-color: $white;
   &.selected {
-    border-color: $group-selected-border-color;
     background-color: $group-selected-bg-color;
+    border-color: $group-selected-border-color;
     > .zenius-tooltip-menu { visibility: visible; }
+  }
+  &.focus {
+    background-color: $group-selected-bg-color;
   }
   // displayType이 hidden일 경우
   &.off { display: none; }
@@ -37,6 +40,7 @@
     width: 100%;
     min-height: 2.5rem; // 40px
     padding: 0 0.625rem 0 0.625rem; // 0 10px 0 10px
+    margin: 0 0 0.9375rem 0; // 0 0 15px 0
     &.off { display: none; }
     // 라벨 문구
     .zenius-group-label-text {
@@ -53,11 +57,9 @@
   }
   // 아코디언 사용중일 경우
   &.accordion {
-    border-bottom : $group-accordion-border;
     // 체크박스 선택 = 아코디언 펼침
     .zenius-group-accordion-checkBox:checked {
       + .zenius-group-label {
-        border-bottom-color: $group-accordion-border-color;
         .arrow-left {
           @include rotate(-90);
         }
@@ -68,11 +70,9 @@
     }
     // 라벨
     .zenius-group-label {
-      border: $group-accordion-border;
-      background-color: $group-accordion-bg-color;
+      @include border(0.125rem, solid, $group-accordion-border-color, bottom);
       padding: 0 1.125rem 0 0.625rem; // 0 18px 0 10px
       cursor: pointer;
-      border-bottom-color: transparent;
 
       &.off {
         display: table;
@@ -100,8 +100,8 @@
 // row 툴팁
 .zenius-row-tooltip {
   position: relative;
-  padding: 1.25rem; // 20px
-  border: 0.0625rem solid transparent; // 1px
+  @include border(0.0625rem, solid, #D7DBE0, all); // 1px
+  @include borderRadius($row-selected-border-radius);
   background-color: transparent;
   &.selected {
     border-color: $row-selected-border-color;
@@ -111,20 +111,19 @@
   // displayType이 hidden일 경우
   &.off { display: none; }
 }
-// row
-.zenius-row {
-  // TODO: 삭제
-  background-color: map-get($grays, "light");
-}
+
 // component 툴팁
+// todo: 1 row 1 component 일 경우 dashed border 제거
 .zenius-component-tooltip {
   position: relative;
   flex-basis: calc((100% * var(--data-column, #{$column-row})) / #{$column-row});
-  padding:  0.75rem 1.25rem; // 12px 20px
-  border: 0.0625rem solid transparent; // 1px
+  padding: 0.375rem 0.5rem; // 6px 8px
+  margin: 0.375rem; // 6px
+  @include border(0.0625rem, dashed, #D7DBE0, all); // 1px
+  @include borderRadius(0.0625rem); // 2px
   background-color: transparent;
   &.selected {
-    border-color: $component-selected-border-color;
+    @include border(0.0625rem, solid, $component-selected-border-color, all); // 1px
     background-color: $component-selected-bg-color;
     >.zenius-tooltip-menu { visibility: visible; }
   }
@@ -150,7 +149,11 @@
     padding: 0.4375rem 0; // 7px 0
 
     // inputBox
-    .input { width: 100%; }
+    .input {
+      width: 100%;
+      @include border(0.0625rem, solid, $component-border-color, all); // 1px
+      @include borderRadius(0.0625rem); // 2px
+    }
   }
 }
 // label
