#10554 폼 디자이너 디자인 개선
- MR 피드백

--- a/src/main/resources/public/src/scss/formRefactoring/_form.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_form.scss
@@ -151,7 +151,7 @@
     // inputBox
     .input {
       width: 100%;
-      @include border(0.0625rem, solid, $component-border-color, all); // 1px
+      @include border(0.0625rem, solid, transparent, all); // 1px
       @include borderRadius(0.0625rem); // 2px
     }
   }
