--- a/src/main/resources/public/assets/css/formRefactoring.css
+++ b/src/main/resources/public/assets/css/formRefactoring.css
@@ -4514,6 +4514,8 @@ body.modal-active {
   text-align: center;
   font-size: 1.125rem;
   border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
   padding: 0.6875rem 0.875rem;
   margin: 1.3125rem 0 0 0;
   position: absolute;
@@ -4836,6 +4838,10 @@ body.modal-active {
 }
 .zenius-component .zenius-element .input {
   width: 100%;
+  border: 0.0625rem solid transparent;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
 }
 
 .zenius-component[data-displayType]:not([data-displayType=required]) .zenius-component-label span[class=required] {
