--- a/src/main/resources/public/src/scss/formRefactoring/_tooltip.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_tooltip.scss
@@ -50,8 +50,8 @@
     font-weight: $clipboard-tooltip-font-weight;
     color: $clipboard-tooltip-font-color;
     background-color: $clipboard-tooltip-bg-color;
-    border: $clipboard-tooltip-border;
-    border-radius: $clipboard-tooltip-border-radius;
+    @include border($clipboard-tooltip-border-width, solid, $clipboard-tooltip-border-color, all);
+    @include borderRadius($clipboard-tooltip-border-radius);
     text-align: center;
     padding: 0.313rem; // 5px
     z-index: $z-index-tooltip;
@@ -89,8 +89,8 @@
     width: $tooltip-contents-width;
     font-size: $tooltip-font-size;
     color: $tooltip-contents-color;
-    border: $tooltip-contents-border;
-    border-radius: $tooltip-contents-border-radius;
+    @include border($tooltip-contents-border-width, solid, $tooltip-contents-border-color, all);
+    @include borderRadius($tooltip-contents-border-radius);
     padding: $tooltip-contents-padding;
     margin: 0.25rem 0 0 0;
     box-shadow: $tooltip-contents-box-shadow;
