--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -109,7 +109,8 @@
         let PATTERN_UPDATE = false;
         const STATUS_SUCCESS = '0';
         const STATUS_ERROR_RULE_USED = '1';
-        var count = 2;
+        let count = 2;
+        const maxCount = 3;
 
         window.onload = function () {
             getRuleList(true);
@@ -399,7 +400,7 @@
                 }
                 count++;
             } else {
-                aliceAlert.alertWarning(i18n.msg('rule.msg.addPattern', count));
+                aliceAlert.alertWarning(i18n.msg('rule.msg.addPattern', maxCount));
             }
         }
 
