#10536 CMDB TYPE 아이콘 기능 개선 1. 선택된 아이콘 삭제 버튼(X) 추가 2. 기존 column 에 따른 넓이 조정 이슈 수정

--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -632,6 +632,7 @@ label {
     margin: 0; 
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    flex-basis: calc((100% * var(--data-column, 12)) / 12);
 
     &:focus,
     &:hover {
