--- a/src/main/resources/public/src/scss/formRefactoring/_properties.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_properties.scss
@@ -29,7 +29,7 @@
     padding-bottom: 0.625rem; // 10px
   }
   // margin / padding 박스 모델
-  .input-box {
+  .box-model {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
